change improved to enhanced

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         'Ensured high data integrity and quality by implementing comprehensive data validation checks and automated monitoring systems, reducing data discrepancies by 40%.',
                         'Automated various web tasks and implemented robust web scraping solutions using Selenium, resulting in improved data collection efficiency by 65%.',
                         'Developed solutions for processing both structured and unstructured (text) data, enabling new capabilities to identify a specific product and its specifications using similarity metrics.',
-                        'Researched, evaluated, and implemented new technologies to continuously improve the existing data stack, resulting in improved pipeline performance by 35%.',
+                        'Researched, evaluated, and implemented new technologies to continuously improve the existing data stack, resulting in enhanced pipeline performance by 35%.',
                     ],
                     achievements: [
                         'Led the automation of product-matching tasks, resulting in a 100% increase in total matched products with a 50% reduction in processing time and price-checking tasks, resulting in an 80% increase in total checked prices with a 40% reduction of data discrepancies.',
